[gd_scene load_steps=13 format=3 uid="uid://c7o7d8pp8r4vd"]

[ext_resource type="Script" path="res://Charecters/Enemy - one/enemy_type_3.gd" id="1_q3lt2"]
[ext_resource type="Texture2D" uid="uid://bwkn81door4v3" path="res://Assets/Line - enemy/enemy dos/enemy dos eina desine/enemy_dos_eina0.png" id="2_5petc"]
[ext_resource type="Texture2D" uid="uid://rwhmhfq50xid" path="res://Assets/Line - enemy/enemy dos/enemy dos death/enemy_dos_death0.png" id="2_25bre"]
[ext_resource type="AudioStream" uid="uid://i2htpg7odryg" path="res://sounds tracks/alien-screaming-82512.mp3" id="2_lspc3"]
[ext_resource type="Texture2D" uid="uid://cypwxgb76ca7" path="res://Assets/Line - enemy/enemy dos/enemy dos death/enemy_dos_death1.png" id="3_gnli0"]
[ext_resource type="Texture2D" uid="uid://bm0g1xg6b2we2" path="res://Assets/Line - enemy/enemy dos/enemy dos eina desine/enemy_dos_eina1.png" id="3_w022f"]
[ext_resource type="Texture2D" uid="uid://b4eh1u1i6gk4x" path="res://Assets/Line - enemy/enemy dos/enemy dos death/enemy_dos_death2.png" id="4_r1r5d"]
[ext_resource type="Texture2D" uid="uid://ch6ot3wtfxqnm" path="res://Assets/Line - enemy/enemy dos/enemy dos death/enemy_dos_death3.png" id="5_8hjw0"]
[ext_resource type="Texture2D" uid="uid://dxk22edtqkfhe" path="res://Assets/Line - enemy/enemy dos/enemy dos death/enemy_dos_death4.png" id="6_puh8t"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0a3ja"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_25bre")
}, {
"duration": 1.0,
"texture": ExtResource("3_gnli0")
}, {
"duration": 1.0,
"texture": ExtResource("4_r1r5d")
}, {
"duration": 1.0,
"texture": ExtResource("5_8hjw0")
}, {
"duration": 1.0,
"texture": ExtResource("6_puh8t")
}],
"loop": false,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5petc")
}, {
"duration": 1.0,
"texture": ExtResource("3_w022f")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_36p1a"]
radius = 42.0
height = 134.0

[sub_resource type="CircleShape2D" id="CircleShape2D_udox3"]
radius = 35.3553

[node name="EnemyType3" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 8
collision_mask = 23
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_q3lt2")

[node name="enemy_animation" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 3)
sprite_frames = SubResource("SpriteFrames_0a3ja")
animation = &"death"
frame = 4
frame_progress = 1.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8

[node name="Interaction" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_36p1a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_udox3")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_lspc3")
volume_db = -30.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
